[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/game/entities/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/fx/bean/beams.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_005.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_002.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_001.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_004.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_007.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_003.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_006.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/items/space-shooter-game-objects/PNG/Sprites/Missile/Missile_1_Explosion_000.png" type="Texture" id=10]
[ext_resource path="res://src/game/entities/player/PlayerMisileProjectile.gd" type="Script" id=11]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 1.42108e-14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fire_loop"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fire_start"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8.47033e-22 ), Vector2( 0, -1.42108e-14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = SubResource( 8 )

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.4
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 9 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 7 ), null ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=10]
radius = 282.399

[node name="PlayerMisileProjectile" instance=ExtResource( 1 )]
script = ExtResource( 11 )
VELOCITY = 60.0

[node name="MissileTip" type="Position2D" parent="." index="0"]
position = Vector2( 0, -4 )

[node name="ColorRect" type="ColorRect" parent="MissileTip" index="0"]
margin_right = 10.0
margin_bottom = 12.0
rect_scale = Vector2( 0.1, 0.1 )
color = Color( 0.772549, 0.239216, 0.152941, 1 )

[node name="LifetimeTimer" parent="." index="1"]
wait_time = 4.0

[node name="DirectionTimer" type="Timer" parent="." index="2"]

[node name="ProjectileAnimations" parent="." index="3"]
anims/RESET = SubResource( 2 )
anims/fire_loop = SubResource( 3 )
anims/fire_start = SubResource( 4 )
anims/hit = SubResource( 5 )

[node name="Hitbox" parent="." index="4"]
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="5"]
position = Vector2( -4, 1.42108e-14 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 5 )

[node name="DetectionArea" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
position = Vector2( -2, -1 )
shape = SubResource( 10 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
